feat(property): add update and delete endpoints